--- a/about.html
+++ b/about.html
@@ -161,15 +161,15 @@
 							<!-- one col -->
 							<h4>O CONTRACANTOS</h4>
 							<!-- <h6>&aacute; &eacute; &iacute; &oacute; &uacute; &#324; &#323; &Aacute; &Eacute; &Iacute; &Oacute; &Uacute; &eacute; &egrave; &agrave; &ccedil; &ugrave; &ocirc; &ucirc; &icirc; &ecirc; &acirc; &Ouml; &Ucirc; &yuml; &Uuml; &Otilde;</h6> -->
-							<p> <img src="images/3small.jpg" class="left-align boxed" alt="img"/> Um dos principais grupos vocais do Nordeste brasileiro, o CONTRACANTOS foi criado em 2002 pelo maestro e professor da Universidade Federal de Pernambuco,
+							<p> <img src="images/3small.jpg" class="left-align boxed" alt="img"/> Um dos grupos vocais de destaque do Nordeste brasileiro, o CONTRACANTOS foi criado em 2002 pelo maestro e professor da Universidade Federal de Pernambuco,
 							Flávio Medeiros. Já se apresentou em diversas cidades de Pernambuco, em outros estados do Nordeste e no exterior, na França, Suíça e Estados Unidos.
 							Seu repertório é centrado em peças de compositores brasileiros, valorizando a cultura nordestina, mas também se estende pelos diversos estilos e períodos da
 							história da música universal. Do maracatu, da ciranda e do côco  à ópera e ao oratório, da música popular à erudita, do sacro ao
 							profano, o CONTRACANTOS transita entre diversos universos realizando pesquisa musical na elaboração dos seus espetáculos e concertos. </p>
 							<p>
-							Atualmente é composto por 17 <a href="staff.html">cantores</a>, todos com formação especializada: Fábia Sobral, Maria Aida Barroso, Sue, Tarciana Damião,
-							Tarcyla Perboire (sopranos), Adriana Carla, Lúcia Helena, Mariane Mariz, Surama Ramos, Virgínia Cavalcanti (contraltos),
-							Eudes Naziazeno, Isaac Pedro, Jadiel Gomes, Matheus Soares (Tenores), Luiz Kleber Queiroz, Guilherme Jacobsen, Osvaldo Pacheco (baixos).
+							Atualmente é composto por 17 <a href="staff.html">cantores</a>: Fábia Sobral, Maria Aida Barroso, Mariane Mariz, Sue, Tarcyla Perboire, Vanessa de Melo Lacerda (sopranos), 
+							Adriana Carla, Lucia Helena Cysneiros, Surama Ramos (contraltos), Eudes Naziazeno, Isaac Pedro, Mário Monteiro, Matheus Soares (Tenores), 
+							Douglas Araújo, Luiz Kleber Queiroz, Guilherme Jacobsen e Osvaldo Pacheco (baixos).
 							</p>
 							<p>
 							O CONTRACANTOS tem se apresentado em concertos, à cappella ou acompanhado por conjuntos de câmara ou orquestras, sob regência de Flávio Medeiros ou de maestros brasileiros como Osman Gioia, Sílvio Barbato, José Renato Accioly, Dierson Torres e Maria Aida Barroso,
@@ -177,7 +177,7 @@
 							</p>
 
 							<p> <img src="img/gallery/historia/foto3medium.png" class="right-align boxed" alt="img"/>
-							Para 2016 o CONTRACANTOS realizará, com o patrocínio do Governo do Estado de Pernambuco (FUNDARPE/FUNCULTURA), a turnê POVO
+							Em 2016 o CONTRACANTOS realizou, com o patrocínio do Governo do Estado de Pernambuco (FUNDARPE/FUNCULTURA), a turnê POVO
 							BRASILEIRO: CANTOS DO NORDESTE pelas cidades de Grenoble, Lyon e Paris, na França e em Recife, e a turnê RÉQUIEM PARA ARIANO
 							SUASSUNA por seis cidades de Pernambuco.
 							</p>
