Add integrante no about

--- a/about.html
+++ b/about.html
@@ -168,7 +168,7 @@
 							profano, o CONTRACANTOS transita entre diversos universos realizando pesquisa musical na elaboração dos seus espetáculos e concertos. </p>
 							<p>
 							Atualmente é composto por 17 <a href="staff.html">cantores</a>: Fábia Sobral, Maria Aida Barroso, Mariane Mariz, Sue, Tarcyla Perboire, Vanessa de Melo Lacerda (sopranos), 
-							Adriana Carla, Lucia Helena Cysneiros, Surama Ramos (contraltos), Eudes Naziazeno, Isaac Pedro, Mário Monteiro, Matheus Soares (Tenores), 
+							Adriana Carla, Lucia Helena Cysneiros, Surama Ramos, Virgínia Cavalcanti (contraltos), Eudes Naziazeno, Isaac Pedro, Mário Monteiro, Matheus Soares (Tenores), 
 							Douglas Araújo, Luiz Kleber Queiroz, Guilherme Jacobsen e Osvaldo Pacheco (baixos).
 							</p>
 							<p>
