Mudando ficha técnica do cantos de trabalho

--- a/portfolio-cantos-trabalho-fr.html
+++ b/portfolio-cantos-trabalho-fr.html
@@ -277,11 +277,10 @@ Les gens de ma confiance me sourient”
 								<div class="portfolio-text">
 									<p><b>Direction Musicale et Conduction</b> Flávio Medeiros <br>
 										<b>Conception et Scénario</b> Flávio Medeiros et Luiz Kleber Queiroz <br>
-										<b>Direction scénique</b> Luiz Kleber Queiroz <br>
-										<b>Composition et Arrangements</b> Lúcia Helena Cysneiros <br>
-										<b>Préparation corporelle e Actrice Invitée</b> Pollyanna Monteiro<br>
-										<b>Accessoires</b> Marcondes Lima <br>
-										<b>Production</b> Guilherme Jacobsen, Lúcia Helena Cysneiros, Matheus Soares, Maria Aida Barroso, Mariane Mariz et Tainá Menezes <br>
+										<b>Direction scénique</b> Pollyanna Monteiro <br>
+										<b>Composition et Arrangements</b> Lúcia Helena Cysneiros et Henrique Albino <br>
+										<b>Accessoires</b> Lúcia Helena Cysneiros, Pollyanna Monteiro, Paulo Michelotto e Marcondes Lima  <br>
+										<b>Production</b> Tainá Menezes, Guilherme Jacobsen, Lúcia Helena Cysneiros, Matheus Soares et Mariane Mariz <br>
 										<!--<b>Produção em viagem</b> Aymara Almeida Santos de Souza -->
 									</p>
 									<p>
