--- a/portfolio-cantos-trabalho.html
+++ b/portfolio-cantos-trabalho.html
@@ -278,12 +278,10 @@ Minha gente de fé me sorri”.
 								<div class="portfolio-text">
 									<p><b>Direção Musical e Regência</b> Flávio Medeiros <br>
 										<b>Concepção e Roteiro</b> Flávio Medeiros e Luiz Kleber Queiroz <br>
-										<b>Direção Cênica</b> Luiz Kleber Queiroz <br>
-										<b>Composição e Arranjos</b> Lúcia Helena Cysneiros <br>
-										<b>Preparação Corporal e Atriz Convidada</b> Pollyanna Monteiro<br>
-										<b>Figurinos e Adereços</b> Marcondes Lima <br>
-										<b>Produção</b> Guilherme Jacobsen, Lúcia Helena Cysneiros, Matheus Soares, Maria Aida Barroso, Mariane Mariz e Tainá Menezes <br>
-										<!--<b>Produção em viagem</b> Aymara Almeida Santos de Souza -->
+										<b>Direção Cênica</b> Pollyanna Monteiro <br>
+										<b>Composição e Arranjos</b> Lúcia Helena Cysneiros e Henrique Albino <br>
+										<b>Figurinos e Adereços</b> Lúcia Helena Cysneiros, Pollyanna Monteiro, Paulo Michelotto e Marcondes Lima <br>
+										<b>Produção</b> Tainá Menezes, Guilherme Jacobsen, Lúcia Helena Cysneiros, Matheus Soares e Mariane Mariz  <br>
 									</p>
 									<p>
 										<b>Apoio</b>
