Mudando o banner de cantos de trabalho

--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
 						<!-- <a href="" id="slideshow-link" ><span></span></a>-->
 						<!-- slides -->
 						<ul id="slides">
+								<li><a href="portfolio-cantos-trabalho.html"><img src="images/banner-cantos-trabalho.png" alt="Imagen" style="width: 960px;" /></a></li>
 								<li><a href="portfolio-povo-brasileiro.html"><img src="images/banner-povo-brasileiro.jpg" alt="Imagen" /></a></li>
                 <li><a href="#1"><img src="images/1.jpg"  alt="Imagen" /></a></li>
                 <li><a href="#2"><img src="images/2.jpg"  alt="Imagen" /></a></li>
