--- a/portfolio-cantos-trabalho-fr.html
+++ b/portfolio-cantos-trabalho-fr.html
@@ -164,7 +164,7 @@
 					</div>
 					<!-- ENDS title -->
 					<div style="padding-left: 35px">
-						<img src="img/gallery/cantos-trabalho-ensaio/capa.jpg" alt="Thumb" class="portfolio-image" style="width: 930px" />	
+						<img src="images/banner-cantos-trabalho.png" alt="Thumb" class="portfolio-image" style="width: 930px" />	
 					</div>
 					
 					<!-- page-content -->
