Mudando o release de vanessa.

--- a/staff.html
+++ b/staff.html
@@ -453,7 +453,18 @@
 												<div class="contact">Soprano</div>
 											</div>
 											<div>
-												<p>A soprano recifense Vanessa de Melo Lacerda teve aos sete anos de idade seu primeiro contato com o mundo da música. Fez parte do coral infantil do Colégio Marista São Luis, sendo integrante até o final do ensino fundamental, e lá teve aulas de flauta com o professor Deneil Laranjeira, seu primeiro maestro. Estudou piano durante três anos na escola de música BL, com Valdetaim do Monte, Miguel Iago Cavalcanti, e Diego Drão, e durante um ano no CEMO com a professora Dayse Gomes. Enquanto cursava Direito na Universidade Católica de Pernambuco, teve contato com o coral da instituição, o Madrigal Lindbergh Pires, sob a regência do maestro Jadson Oliveira e o acompanhamento do pianista Alison Queiroz. Ingressou no madrigal no ano de 2014 e lá permanece até os dias atuais, sendo solista de inúmeros recitais e assim, tendo um horário semanal para correpetições com o pianista e receber orientações do maestro. Em 2015, dá início ao curso de iniciação musical no Conservatório Pernambucano de Música, onde hoje está fazendo o curso técnico de canto erudito sob a orientação da professora Rosemary Carlos, grande soprano pernambucana. Fez parte do coral sinfônico do Seminário Teológico Batista do Norte do Brasil no ano de 2017. Foi recentemente convidada pelo maestro Flávio Medeiros, em 2018, para fazer parte do coral Contracantos, importante grupo musical da UFPE. A soprano recifense recebe também o apoio do barítono Miguelangelo Cavalcanti, residente da Ópera de Praga, que vem constantemente a Recife realizar Master classes e aulas particulares para os estudantes da região. Conta também com a formação em alguns idiomas: inglês fluente, alemão e italiano básico e recentemente ingressou no curso de francês.
+												<p>Natural de Recife, Pernambuco, bacharela em Direito pela Unicap, em 2015.
+Sua primeira experiência musical começou aos sete anos de idade, com a participação no coral infantil do Colégio Marista São Luís, sob a regência de Deneil Laranjeira, onde também teve aulas de flauta doce com o mesmo professor.
+Estudou canto erudito no Conservatório Pernambucano de Música desde 2015 com a professora Rosemary Carlos, e hoje estuda com a professora Elizete Galvão.
+Participou de Master classes com Miguelangelo Cavalcanti (Brasil/República Tcheca), Mariana Mihai-Zoether (EUA), Angela Dieu (Itália), Tatiana Vanderlei (Brasil), Radu Pantea (Luxemburgo).
+Participou da I Oficina de Música Antiga do Recife, sob a coordenação do Dr. Marcelo Ferreira, com master classes dos professores Ottaviano Tenerani (cravo e regência), Martino Noferi (flauta doce e oboé), Marica Testi (flauta transversa), Florian Deuter (violino e regência), e Vitor Philomeno (coach vocal), em 2019.
+Participou da III Oficina de Canto Lírico do Recife, com os professores Dr. Marcelo Ferreira e Dr. Vitor Philomeno, em 2019.
+Estudou piano com Valdetaim do Monte, Miguel Iago Cavalcanti, e Diego Drão na escola BL music, e com a professora Dayse Gomes no CEMO.
+Solista e corista do coral Madrigal Lindbergh Pires, da UNICAP, sob a regência do maestro Jadson Oliveira e acompanhamento do pianista Alison Queiroz, desde 2014.
+Integrante do coral Contracantos, da UFPE, sob a regência do professor Flávio Medeiros, desde 2018.
+Integrante da Academia de Ópera e Repertório de Pernambuco, sob a regência do maestro Dr. Wendell Kettle, desde 2019.
+Ex integrante do Coro Sinfônico do Seminário Teológico Batista do Norte do Brasil, sob a regência da maestrina Hadassa Rossiter.
+Participou do I Festival de Ópera de Pernambuco, atuando como solista na Ópera Carmen de G. Bizet, interpretando a personagem “Frasquita”, e como corista das Óperas Leonor, de Euclides Fonseca, e Il Pagliacci, de R. Leoncavallo.
 												</p>
 											</div>
 										</div>
