Mudando o nome de vanessa.

--- a/staff.html
+++ b/staff.html
@@ -449,7 +449,7 @@
 										<img src="img/vanessa.jpg" alt="Pic" />
 										<div class="information">
 											<div class="header">
-												<div class="name">Vanessa de Melo Lacerda</div>
+												<div class="name">Vanessa de Melo</div>
 												<div class="contact">Soprano</div>
 											</div>
 											<div>
